--- a/src/main/resources/competition.fxml
+++ b/src/main/resources/competition.fxml
@@ -82,12 +82,30 @@
                               </VBox>
                            </children>
                         </HBox>
+                        <VBox alignment="BOTTOM_RIGHT">
+                           <children>
+                              <Button id="blue" fx:id="poBtnConf" minWidth="120.0" mnemonicParsing="false" text="Configuration" textAlignment="CENTER">
+                                 <VBox.margin>
+                                    <Insets bottom="10.0" right="20.0" />
+                                 </VBox.margin>
+                              </Button>
+                              <Button id="blue" fx:id="poBtnDev" minWidth="120.0" mnemonicParsing="false" text="Devices">
+                                 <VBox.margin>
+                                    <Insets bottom="10.0" right="20.0" top="10.0" />
+                                 </VBox.margin>
+                              </Button>
+                              <Button id="green" fx:id="poBtnStart" minWidth="120.0" mnemonicParsing="false" text="Start">
+                                 <VBox.margin>
+                                    <Insets bottom="20.0" right="20.0" top="10.0" />
+                                 </VBox.margin></Button>
+                           </children>
+                        </VBox>
                      </children>
                   </StackPane>
                </content></Tab>
           <Tab text="Kyorugui">
                <content>
-                  <StackPane fx:id="kyStackPane">
+                  <StackPane id="kyStackPane" fx:id="kyStackPane">
                      <children>
                         <ImageView fx:id="imageViewKy" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" StackPane.alignment="TOP_LEFT">
                            <StackPane.margin>
@@ -148,12 +166,12 @@
                            <children>
                               <VBox alignment="BOTTOM_RIGHT">
                                  <children>
-                                    <Button fx:id="blue" alignment="CENTER" contentDisplay="CENTER" minWidth="120.0" mnemonicParsing="false" text="Configuration" textAlignment="CENTER">
+                                    <Button id="blue" fx:id="btnConfKy" alignment="CENTER" contentDisplay="CENTER" minWidth="120.0" mnemonicParsing="false" text="Configuration" textAlignment="CENTER">
                                        <VBox.margin>
                                           <Insets bottom="10.0" right="20.0" />
                                        </VBox.margin>
                                     </Button>
-                                    <Button fx:id="blue" alignment="CENTER" contentDisplay="CENTER" minWidth="120.0" mnemonicParsing="false" text="Devices" textAlignment="CENTER">
+                                    <Button id="blue" fx:id="btnDevKy" alignment="CENTER" contentDisplay="CENTER" minWidth="120.0" mnemonicParsing="false" text="Devices" textAlignment="CENTER">
                                        <opaqueInsets>
                                           <Insets />
                                        </opaqueInsets>
