--- a/src/main/resources/poomsae_configuration.fxml
+++ b/src/main/resources/poomsae_configuration.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
@@ -9,13 +10,77 @@
 <?import javafx.scene.layout.VBox?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+   <top>
+      <VBox alignment="CENTER" BorderPane.alignment="CENTER">
+         <children>
+            <Label text="Poomsae" />
+         </children>
+         <BorderPane.margin>
+            <Insets top="20.0" />
+         </BorderPane.margin>
+      </VBox>
+   </top>
    <center>
       <VBox BorderPane.alignment="CENTER">
          <children>
-            <Label text="Referees" />
             <HBox alignment="CENTER_LEFT">
                <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" text="Competition areas:" textAlignment="CENTER" />
+                  <Label text="Referees" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER_LEFT">
+               <padding>
+                  <Insets top="20.0" />
+               </padding>
+               <children>
+                  <Label text="Competition areas:" />
+                  <TextField prefWidth="60.0">
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
+                  </TextField>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER_LEFT">
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+               <children>
+                  <Label text="Referres per area:" />
+                  <TextField prefWidth="60.0">
+                     <HBox.margin>
+                        <Insets left="26.0" />
+                     </HBox.margin>
+                  </TextField>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER_LEFT">
+               <children>
+                  <Label text="Type:" />
+                  <ComboBox prefWidth="150.0">
+                     <HBox.margin>
+                        <Insets left="109.0" />
+                     </HBox.margin>
+                  </ComboBox>
+               </children>
+               <padding>
+                  <Insets top="10.0" />
+               </padding>
+            </HBox>
+            <HBox alignment="CENTER_LEFT">
+               <padding>
+                  <Insets top="40.0" />
+               </padding>
+               <children>
+                  <Label text="Competition" />
+               </children>
+               <opaqueInsets>
+                  <Insets top="10.0" />
+               </opaqueInsets>
+            </HBox>
+            <HBox alignment="CENTER_LEFT">
+               <children>
+                  <Label text="Minimum score:" />
                   <TextField prefWidth="60.0">
                      <HBox.margin>
                         <Insets left="20.0" />
@@ -28,89 +93,20 @@
             </HBox>
             <HBox alignment="CENTER_LEFT">
                <children>
-                  <Label text="Referees per area:" />
+                  <Label text="Maximum score:" />
                   <TextField prefWidth="60.0">
                      <HBox.margin>
-                        <Insets left="23.0" />
+                        <Insets left="16.0" />
                      </HBox.margin>
                   </TextField>
                </children>
-               <VBox.margin>
+               <padding>
                   <Insets top="10.0" />
-               </VBox.margin>
+               </padding>
             </HBox>
-            <Label text="Competition">
-               <VBox.margin>
-                  <Insets top="40.0" />
-               </VBox.margin>
-            </Label>
-            <HBox alignment="CENTER_LEFT">
-               <VBox.margin>
-                  <Insets top="20.0" />
-               </VBox.margin>
+            <HBox alignment="BOTTOM_CENTER">
                <children>
-                  <Label text="Punch points:" />
-                  <TextField prefWidth="60.0">
-                     <HBox.margin>
-                        <Insets left="40.0" />
-                     </HBox.margin>
-                  </TextField>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT">
-               <VBox.margin>
-                  <Insets top="10.0" />
-               </VBox.margin>
-               <children>
-                  <Label text="Chest front kick:" />
-                  <TextField prefWidth="60.0">
-                     <HBox.margin>
-                        <Insets left="22.0" />
-                     </HBox.margin>
-                  </TextField>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT">
-               <VBox.margin>
-                  <Insets top="10.0" />
-               </VBox.margin>
-               <children>
-                  <Label text="Chest back kick:" />
-                  <TextField prefWidth="60.0">
-                     <HBox.margin>
-                        <Insets left="22.0" />
-                     </HBox.margin></TextField>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT">
-               <VBox.margin>
-                  <Insets top="10.0" />
-               </VBox.margin>
-               <children>
-                  <Label text="Head front kick:" />
-                  <TextField prefWidth="60.0">
-                     <HBox.margin>
-                        <Insets left="25.0" />
-                     </HBox.margin>
-                  </TextField>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <Label text="Head back kick:" />
-                  <TextField prefWidth="60.0">
-                     <HBox.margin>
-                        <Insets left="25.0" />
-                     </HBox.margin>
-                  </TextField>
-               </children>
-               <VBox.margin>
-                  <Insets top="10.0" />
-               </VBox.margin>
-            </HBox>
-            <HBox alignment="CENTER">
-               <children>
-                  <Button mnemonicParsing="false" text="Save" />
+                  <Button alignment="BOTTOM_RIGHT" mnemonicParsing="false" text="Save" />
                </children>
             </HBox>
          </children>
@@ -119,14 +115,4 @@
          </BorderPane.margin>
       </VBox>
    </center>
-   <top>
-      <Label text="Kyorugui" textAlignment="CENTER" BorderPane.alignment="CENTER">
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-         <BorderPane.margin>
-            <Insets top="20.0" />
-         </BorderPane.margin>
-      </Label>
-   </top>
 </BorderPane>
