--- a/src/main/resources/devices_synchronization.fxml
+++ b/src/main/resources/devices_synchronization.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -59,31 +58,10 @@
                   <Insets bottom="20.0" />
                </VBox.margin>
             </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <Label text="Competition areas:">
-                     <HBox.margin>
-                        <Insets left="40.0" />
-                     </HBox.margin></Label>
-                  <TextField prefWidth="60.0">
-                     <HBox.margin>
-                        <Insets left="20.0" />
-                     </HBox.margin></TextField>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <Label text="Referees per area:">
-                     <HBox.margin>
-                        <Insets left="40.0" />
-                     </HBox.margin></Label>
-                  <TextField prefWidth="60.0">
-                     <HBox.margin>
-                        <Insets left="22.0" />
-                     </HBox.margin></TextField>
-               </children>
-            </HBox>
          </children>
+         <BorderPane.margin>
+            <Insets left="40.0" />
+         </BorderPane.margin>
       </VBox>
    </center>
 </BorderPane>
