--- a/src/main/resources/competition.fxml
+++ b/src/main/resources/competition.fxml
@@ -208,7 +208,7 @@
           </Menu>
           <Menu mnemonicParsing="false" text="Edit">
             <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
+                  <MenuItem fx:id="configurationBtn" mnemonicParsing="false" text="Configuration" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Help">
