--- a/src/main/resources/competition.fxml
+++ b/src/main/resources/competition.fxml
@@ -55,7 +55,7 @@
                                        <VBox.margin>
                                           <Insets />
                                        </VBox.margin></ListView>
-                                    <Button mnemonicParsing="false" text="Add Category">
+                                    <Button mnemonicParsing="false" text="Add Category" fx:id="btnAddCategoryP">
                                        <VBox.margin>
                                           <Insets top="10.0" />
                                        </VBox.margin></Button>
@@ -130,7 +130,7 @@
                                           <Insets bottom="10.0" />
                                        </VBox.margin></Label>
                                     <ListView />
-                                    <Button mnemonicParsing="false" text="Add Category">
+                                    <Button mnemonicParsing="false" text="Add Category" fx:id="btnAddCategoryK">
                                        <VBox.margin>
                                           <Insets top="10.0" />
                                        </VBox.margin></Button>
@@ -166,7 +166,7 @@
                                           <Insets bottom="10.0" right="20.0" />
                                        </VBox.margin>
                                     </Button>
-                                    <Button fx:id="green" alignment="CENTER" contentDisplay="CENTER" minWidth="120.0" mnemonicParsing="false" text="Start" textAlignment="CENTER">
+                                    <Button id="green" fx:id="kyBtnStart" alignment="CENTER" contentDisplay="CENTER" minWidth="120.0" mnemonicParsing="false" text="Start" textAlignment="CENTER">
                                        <VBox.margin>
                                           <Insets bottom="20.0" right="20.0" top="10.0" />
                                        </VBox.margin>
